--- a/style.css
+++ b/style.css
@@ -2,7 +2,17 @@
   margin: 0;
   padding: 0;
 }
+body {
+  font-family: lato;
+}
 
+h5 {
+  font-size: 1.5em !important;
+  margin: 1vh 0;
+}
+button {
+  margin-bottom: 1vh;
+}
 #note {
   display: flex;
   flex-direction: column;
@@ -57,7 +67,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 2vh 1vw;
+  margin: 1vh 1vw;
 }
 .car {
   margin: 2vh 1vw;
@@ -113,7 +123,7 @@
   }
   #note {
     order: 2;
-    margin-top: -40vh;
+    margin-top: 0vh;
   }
   #cardbody {
     /* width: 100% !important; */
